--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>SGRT | About</title>
 
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,15 +28,22 @@
                 </a>
                 <span class="header-heading">Structural Glass Research and Testing Facility </span>
             </div>
-            <div class="top-info pull-right">
+            <div class="iitm-logo-mobile">
+                <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                    <img class="header-image" src="img/project/iitm.png"
+                        style="height: 57px !important; margin-top: -10px;" alt="Awesome Logo">
+                </a>
+            </div>
+            <div class="top-info pull-right" style="text-align: center;">
                 <ul>
                     <li class="single-info-box">
                         <div class="text-holder">
                     <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
                     <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a>
                     </li>
-                    <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
-                        <img class="header-image" src="img/project/iitm.png" alt="Awesome Logo">
+                    <a class="iitm-logo-right" style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                        <img class="header-image" src="img/project/iitm.png"
+                            style="height: 57px !important; margin-top: -10px;" alt="Awesome Logo">
                     </a>
             </div>
             </li>
@@ -86,7 +93,7 @@
     <!--End mainmenu area-->
 
     <!--Start breadcrumb area-->
-    <section class="breadcrumb-area" style="background-image: url(img/breadcrumb/breadcrumb-bg.jpg);">
+    <section class="breadcrumb-area" style="background-image: url(img/breadcrumb/About-us.jpeg);">
         <div class="container text-center">
             <h1>About Us</h1>
         </div>
@@ -156,7 +163,7 @@
                         </div>
                         <div class="col-md-9 col-sm-9">
                             <div class="text-holder mt-1">
-                                <h3>Arul S Jayachandran</h3>
+                                <h3>S Arul Jayachandran</h3>
                                 <p>Professor, Head of the Laboratory</p>
                                 <p>STR 403, Structural Engineering Laboratory,<br>
                                     Department of Civil Engineering,
@@ -164,13 +171,17 @@
                                     Chennai, TN 600036, India</p>
                                 <br>
                                 <h4>Research areas (Prof.)</h4>
-                                <p>Advanced analysis and design of steel structures<br> Computational Structural
-                                    Stability <br>
+                                <p>Advanced analysis and design of steel structures<br> 
+                                    Computational Structural Stability <br>
                                     Glass Structural Engineering <br>
                                     Teaching Learning Methods in Engineering</p>
 
                                 <ul>
-                                    <li><span>Tel:</span><a target="_blank" href="tel:914422574292">+91 44 2257 4292</a>
+                                    <li><span>Website:</span><a target="_blank" href="https://home.iitm.ac.in/aruls/">https://home.iitm.ac.in/aruls/</a>
+                                    </li>
+                                    <li><span>LinkedIn:</span><a target="_blank" href="https://www.linkedin.com/in/arul-jayachandran-sanjeevi-30382a102/?originalSubdomain=in">@arul-jayachandran</a>
+                                    </li>
+                                    <li><span>Mobile:</span><a target="_blank" href="tel:914422574292">+91 44 2257 4292</a>
                                     </li>
                                     <li><span>Mail:</span><a target="_blank"
                                             href="mailto:aruls@civil.iitm.ac.in">aruls@civil.iitm.ac.in</a></li>
