--- a/activities.html
+++ b/activities.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Activities</title>
+    <title>SGRT | Activities</title>
 
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,112 +13,6 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- responsive stylesheet -->
     <link rel="stylesheet" href="css/responsive.css">
-    <style>
-        .text-color {
-            color: #0e112c;
-            font-weight: 500;
-        }
-
-        .float-right {
-            float: right;
-        }
-
-        .timeline {
-            width: 100%;
-            /* max-width: 800px; */
-            background: #fff;
-            padding: 100px 39px;
-            position: relative;
-            /* box-shadow: 0.5rem 0.5rem 2rem 0 rgba(0, 0, 0, 0.2); */
-        }
-
-        .timeline:before {
-            content: "";
-            position: absolute;
-            top: 0px;
-            left: calc(33% + 15px);
-            bottom: 0px;
-            width: 4px;
-            background: #ddd;
-        }
-
-        .timeline:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
-
-        .entry {
-            clear: both;
-            text-align: left;
-            position: relative;
-        }
-
-        .entry .title {
-            margin-bottom: 0.5em;
-            float: left;
-            width: 33%;
-            padding-right: 30px;
-            text-align: right;
-            position: relative;
-        }
-
-        .entry .title:before {
-            content: "";
-            position: absolute;
-            width: 8px;
-            height: 8px;
-            border: 4px solid #0e112c;
-            background-color: #fff;
-            border-radius: 100%;
-            top: 15%;
-            right: -8px;
-            z-index: 99;
-        }
-
-        .entry .title h3 {
-            margin: 0;
-            font-size: 120%;
-            background: #0e112c;
-            color: white;
-            width: 60px;
-            text-align: center;
-            float: right;
-            border-radius: 7px;
-        }
-
-        .entry .title p {
-            margin: 0;
-            font-size: 100%;
-        }
-
-        .entry .body {
-            margin: 0 0 3em;
-            float: right;
-            width: 66%;
-            padding-left: 30px;
-        }
-
-        .entry .body p {
-            line-height: 1.4em;
-        }
-
-        .entry .body p:first-child {
-            margin-top: 0;
-            font-weight: 400;
-        }
-
-        .entry .body ul {
-            color: #aaa;
-            padding-left: 0;
-            list-style-type: none;
-        }
-
-        .entry .body ul li:before {
-            content: "–";
-            margin-right: 0.5em;
-        }
-    </style>
 
 </head>
 
@@ -133,15 +27,22 @@
                 </a>
                 <span class="header-heading">Structural Glass Research and Testing Facility </span>
             </div>
-            <div class="top-info pull-right">
+            <div class="iitm-logo-mobile">
+                <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                    <img class="header-image" src="img/project/iitm.png"
+                        style="height: 57px !important; margin-top: -10px;" alt="Awesome Logo">
+                </a>
+            </div>
+            <div class="top-info pull-right" style="text-align: center;">
                 <ul>
                     <li class="single-info-box">
                         <div class="text-holder">
                     <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
                     <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a>
                     </li>
-                    <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
-                        <img class="header-image" src="img/project/iitm.png" alt="Awesome Logo">
+                    <a class="iitm-logo-right" style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                        <img class="header-image" src="img/project/iitm.png"
+                            style="height: 57px !important; margin-top: -10px;" alt="Awesome Logo">
                     </a>
             </div>
             </li>
@@ -191,24 +92,24 @@
     <!--End mainmenu area-->
 
     <!--Start breadcrumb area-->
-    <section class="breadcrumb-area" style="background-image: url(img/breadcrumb/breadcrumb-bg.jpg); display: none;">
+    <section class="breadcrumb-area" style="background-image: url(img/breadcrumb/Activities.jpeg); ;">
         <div class="container text-center">
-            <h1>About Us</h1>
+            <h1>Activities</h1>
         </div>
     </section>
     <!--End breadcrumb area-->
 
     <!--Start breadcrumb bottom area-->
-    <section style="display: none;" class="breadcrumb-bottom-area">
+    <section class="breadcrumb-bottom-area">
         <div class="container">
             <div class="left pull-left">
-                <a href="about.html">About Us</a>
+                <a href="activities.html">Activities</a>
             </div>
             <div class="right pull-right">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
-                    <li>About Us</li>
+                    <li>Activities</li>
                 </ul>
             </div>
         </div>
