--- a/index.html
+++ b/index.html
@@ -27,14 +27,21 @@
                 </a>
                 <span class="header-heading">Structural Glass Research and Testing Facility </span>
             </div>
-            <div class="top-info pull-right">
+            <div class="iitm-logo-mobile">
+                <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                    <img class="header-image" src="img/project/iitm.png"
+                        style="height: 57px !important; margin-top: -10px;" alt="Awesome Logo">
+                </a>
+            </div>
+            <div class="top-info pull-right" style="text-align: center;">
                 <ul>
                     <li class="single-info-box">
                     <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
                     <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a>
                     </li>
-                    <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
-                        <img class="header-image" src="img/project/iitm.png" alt="Awesome Logo">
+                    <a class="iitm-logo-right" style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                        <img class="header-image" src="img/project/iitm.png"
+                            style="height: 57px !important; margin-top: -10px;" alt="Awesome Logo">
                     </a>
                     </li>
                 </ul>
@@ -88,8 +95,9 @@
         <div id="slider1" class="rev_slider" data-version="5.0">
             <ul>
                 <li data-transition="slidingoverlayleft">
-                    <img src="img/slides/test.jpeg" alt="" width="1920" height="580" data-bgposition="center center"
-                        data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg contain" data-bgparallax="1">
+                    <img src="img/project/IIT.jpeg" alt="" width="1920" data-bgposition="center center"
+                        data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg contain" data-bgparallax="1"
+                        data-no-retina>
 
                     <div class="tp-caption tp-resizeme" data-x="right" data-hoffset="0" data-y="center"
                         data-voffset="-4" data-transform_idle="o:1;"
@@ -110,8 +118,9 @@
                     </div>
                 </li>
                 <li data-transition="slidingoverlayleft">
-                    <img src="img/slides/test-2.png" alt="" width="1920" height="580" data-bgposition="center center"
-                        data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg contain" data-bgparallax="1">
+                    <img src="img/slides/test-2.png" alt="" width="1920" data-bgposition="center center"
+                        data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg contain" data-bgparallax="1"
+                        data-no-retina>
 
                     <div class="tp-caption  tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="125"
                         data-transform_idle="o:1;"
@@ -139,8 +148,9 @@
                     </div>
                 </li>
                 <li data-transition="slidingoverlayleft">
-                    <img src="img/slides/test-3.png" alt="" width="1920" height="580" data-bgposition="center center"
-                        data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
+                    <img src="img/project/Structral.jpeg" alt="" width="1920" data-bgposition="center center"
+                        data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg contain" data-bgparallax="1"
+                        data-no-retina>
 
                     <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="0" data-y="center"
                         data-voffset="-129" data-transform_idle="o:1;"
@@ -178,6 +188,36 @@
                             <div class="button">
                                 <a class="thm-btn yellow-bg" href="training-industrial-visit-awareness.html">Read
                                     More</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li data-transition="slidingoverlayleft">
+                    <img src="img/project/IC&SR.jpeg" alt="" width="1920" data-bgposition="center center"
+                        data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg contain" data-bgparallax="1"
+                        data-no-retina>
+
+                    <div class="tp-caption  tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="125"
+                        data-transform_idle="o:1;"
+                        data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:3000;e:Power3.easeOut;"
+                        data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
+                        data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" data-splitin="none" data-splitout="none"
+                        data-start="700">
+                        <div class="slide-content-box">
+                            <!-- <h3>SGRT</h3> -->
+                            <h1>Research & Consultancy</h1>
+                            <p>Industry Press has consistently embraced innovation to<br> provide a superior level of
+                                excellence.</p>
+                        </div>
+                    </div>
+                    <div class="tp-caption tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="394"
+                        data-transform_idle="o:1;"
+                        data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
+                        data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" data-splitin="none"
+                        data-splitout="none" data-responsive_offset="on" data-start="2300">
+                        <div class="slide-content-box">
+                            <div class="button">
+                                <a class="thm-btn yellow-bg" href="research-consultancy.html">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -829,17 +869,33 @@
             <div class="mt-1">
                 <p class="text-justify">&nbsp;&nbsp;As per all Indian and International Standards.</p>
                 <p>&nbsp;&nbsp;To apply for testing</p>
-                <div class="ml-2">
+                <br>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="img/project/GSI.jpeg">
+                    </div>
+                    <div class="col-md-9">
+                        <div class="mt-1">
+                            Website: <a href="https://www.glazingsociety.com/" target="_blank">www.glazingsociety.com
+                            </a> <br>
+                            Email: <a href="mailto:gohul.deepak@glazingsociety.com"
+                                target="_blank">gohul.deepak@glazingsociety.com</a> <br>
+                            Mobile: <a href="tel:+91 99944 98795" target="_blank">+91 99944 98795</a>
+                        </div>
+                    </div>
+
+                </div>
+                <!-- <div class="ml-2">
                     <a href="https://www.glazingsociety.com/" target="_blank">www.glazingsociety.com </a> /
                     <a href="mailto:gohul.deepak@glazingsociety.com" target="_blank">gohul.deepak@glazingsociety.com</a>
-                    /
                     <a href="tel:+91 99944 98795" target="_blank">+91 99944 98795</a>
-                </div>
+                </div> -->
             </div>
         </div>
         </div>
     </section>
     <!--End testing capacities area-->
+
 
     <!--Start structural consultancy area-->
     <section class="services-area">
@@ -857,6 +913,62 @@
         </div>
     </section>
     <!--End research area-->
+
+    <!--Start recent event area-->
+    <section class="services-area">
+        <div class="container">
+            <div class="sec-title">
+                <!-- <p>What We Do For You</p> -->
+                <h1>Events</h1>
+            </div>
+            <div class="row">
+                <!--Start single service item-->
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="single-service-item">
+                        <div class="img-holder">
+                            <img src="img/event/Events-12.jpeg" style="height: 200px;" alt="Awesome Image">
+                        </div>
+                        <div class="text-holder">
+                            <div class="text">
+                                <h3>SGRT participated in Structural Engineering Laboratory Symposium, IIT Madras.</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--End single service item-->
+                <!--Start single service item-->
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="single-service-item">
+                        <div class="img-holder">
+                            <img src="img/event/Events-11.jpeg" style="height: 200px;" alt="Awesome Image">
+                        </div>
+                        <div class="text-holder">
+                            <div class="text">
+                                <h3>GSI and SGRT took part in the ZAK Expo.</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--End single service item-->
+                <!--Start single service item-->
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="single-service-item">
+                        <div class="img-holder">
+                            <img src="img/event/Events-10.jpeg" style="height: 200px;" alt="Awesome Image">
+                        </div>
+                        <div class="text-holder">
+                            <div class="text">
+                                <h3>Visit to Winwall Testing Facility by GSI and SGRT team.</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--End single service item-->
+            </div>
+        </div>
+        </div>
+    </section>
+    <!--End recent event area-->
 
     <!--Start Brand area-->
     <section class="brand-area">
