--- a/training-industrial-visit-awareness.html
+++ b/training-industrial-visit-awareness.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Training, Industrial Visit and Awareness || SGRT</title>
+    <title>SGRT | Training, Industrial Visit and Awareness</title>
 
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,15 +28,22 @@
                 </a>
                 <span class="header-heading">Structural Glass Research and Testing Facility </span>
             </div>
-            <div class="top-info pull-right">
+            <div class="iitm-logo-mobile">
+                <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                    <img class="header-image" src="img/project/iitm.png"
+                        style="height: 57px !important; margin-top: -10px;" alt="Awesome Logo">
+                </a>
+            </div>
+            <div class="top-info pull-right" style="text-align: center;">
                 <ul>
                     <li class="single-info-box">
                         <div class="text-holder">
                     <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
                     <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a>
                     </li>
-                    <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
-                        <img class="header-image" src="img/project/iitm.png" alt="Awesome Logo">
+                    <a class="iitm-logo-right" style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                        <img class="header-image" src="img/project/iitm.png"
+                            style="height: 57px !important; margin-top: -10px;" alt="Awesome Logo">
                     </a>
             </div>
             </li>
