Design change in event and activites screen

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                 </li>
-                <li data-transition="slidingoverlayleft">
+                <!-- <li data-transition="slidingoverlayleft">
                     <img src="img/slides/test-2.png" alt="" width="1920" data-bgposition="center center"
                         data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg contain" data-bgparallax="1"
                         data-no-retina>
@@ -129,7 +129,6 @@
                         data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" data-splitin="none" data-splitout="none"
                         data-start="700">
                         <div class="slide-content-box">
-                            <!-- <h3>SGRT</h3> -->
                             <h1>Research & Consultancy</h1>
                             <p>Industry Press has consistently embraced innovation to<br> provide a superior level of
                                 excellence.</p>
@@ -146,7 +145,7 @@
                             </div>
                         </div>
                     </div>
-                </li>
+                </li> -->
                 <li data-transition="slidingoverlayleft">
                     <img src="img/project/Structral.jpeg" alt="" width="1920" data-bgposition="center center"
                         data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg contain" data-bgparallax="1"
@@ -397,7 +396,7 @@
                         </div>
                         <div class="text-holder">
                             <!-- <h5>CEO & Founder</h5> -->
-                            <h3>Arul S Jayachandran</h3>
+                            <h3>SArul Jayachandran</h3>
                             <p>Professor, Head of the Laboratory</p>
                             <p>STR 403, Dept. of Civil Engineering
                                 Indian Institute of Technology Madras
@@ -621,6 +620,10 @@
                                 Testing Methods for Processed Glass
                             </li>
                             <li>
+                                IS 1623 Part 1 to 4 :
+                                Use of Glass in Buildings - Code of Practice
+                            </li>
+                            <li>
                                 National Building Code 2016
                             </li>
                         </ul>
@@ -634,7 +637,7 @@
                             <li>
                                 Energy Conservation Building Code 2017 <br>
                                 To download the above mentioned standards - <a class="pointer"
-                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://beeindia.gov.in/sites/default/files/ECBC%20book%20final %20one%20%202017.pdf')">Click
+                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://beeindia.gov.in/sites/default/files/BEE_ECBC%202017.pdf')">Click
                                     Here</a>
                             </li>
                             <li>
@@ -689,13 +692,13 @@
                             <li>Existing Research</li>
                             <div class="ml-3 mt-1">
                                 <ul class="custom-bullet">
-                                    <li><a href="" target="_blank">Research study on Structural glass as a building
+                                    <li><a href="research-consultancy.html#1">Research study on Structural glass as a building
                                             material in Indian high-rise buildings</a></li>
-                                    <li><a href="" target="_blank">Research on lateral load behavior of Glass Facade</a>
+                                    <li><a href="research-consultancy.html#2">Research on lateral load behavior of Glass Facade</a>
                                     </li>
-                                    <li><a href="" target="_blank">Research on Fragmentation result interpretation using
+                                    <li><a href="research-consultancy.html#3">Research on Fragmentation result interpretation using
                                             image</a></li>
-                                    <li><a href="" target="_blank">Response behavior of glazed façade subjected to
+                                    <li><a href="research-consultancy.html#4">Response behavior of glazed façade subjected to
                                             wind</a></li>
                                 </ul>
                             </div>
@@ -1291,7 +1294,7 @@
                                     <span class="flaticon-people"></span>
                                 </div>
                                 <div class="content-holder">
-                                    <p><span>Prof. (Dr).</span> Arul S Jayachandran </p>
+                                    <p><span>Prof. (Dr).</span>S Arul Jayachandran </p>
                                 </div>
                             </li>
                             <li>
