--- a/training-industrial-visit-awareness.html
+++ b/training-industrial-visit-awareness.html
@@ -145,7 +145,7 @@
                                                             </div>
                                                             <div class="text-holder">
                                                                 <span class="text-justify">&#9642; Prof Tar Thai with
-                                                                    prof Arul S Jayachandran visited SGRT on
+                                                                    prof S Arul Jayachandran visited SGRT on
                                                                     12.09.2022.</span> <br>
                                                                 <span class="text-justify">&#9642; Prof Arun Menon with
                                                                     his students visited SGRT for training on Glass
@@ -416,7 +416,7 @@
                                     <span class="flaticon-people"></span>
                                 </div>
                                 <div class="content-holder">
-                                    <p><span>Prof. (Dr).</span> Arul S Jayachandran </p>
+                                    <p><span>Prof. (Dr).</span>S Arul Jayachandran </p>
                                 </div>
                             </li>
                             <li>
