--- a/about.html
+++ b/about.html
@@ -250,7 +250,7 @@
                                     <span class="flaticon-people"></span>
                                 </div>
                                 <div class="content-holder">
-                                    <p><span>Prof. (Dr).</span> Arul S Jayachandran </p>
+                                    <p><span>Prof. (Dr).</span>S Arul Jayachandran </p>
                                 </div>
                             </li>
                             <li>
